# PyHeadTracker

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.git-ci/: gitlab-iem.yml
docs/: .readthedocs.yaml  api.rst  conf.py  examples.rst  index.rst  requirements.txt  usage.rst
examples/: IEM_cam.py  SPARTA_sup_q.py  SPARTA_sup_ypr.py  SceneRotator_cam.py  SceneRotator_mht_q.py  SceneRotator_mht_ypr.py  SceneRotator_q.py  SceneRotator_sup_q.py  SceneRotator_sup_ypr.py  SceneRotator_ypr.py  TASCAR_sup_q.py  openXR.py  print_pose.py  print_ypr.py  tascar.tsc
src/pyheadtracker/: __init__.py  cam.py  diy.py  dtypes.py  hmd.py  iem.py  out.py  supperware.py  utils.py
src/pyheadtracker/data/mediapipe-facelandmarker/: NOTICE.txt
src/supperware/: __init__.py  headtracker.py
supperware/: __init__.py  headtracker.py
tests/: test_conversion.py  test_conversion_rpy.py  test_conversion_ypr.py
