[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pyheadtracker"
version = "0.1.0"
description = "Python package for easy interaction with head tracker hardware."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Felix Holzmüller", email = "holzmueller@iem.at" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.2.6",
    "python-rtmidi>=1.5.8",
]

[project.urls]
Homepage = "https://github.com/fholzm/PyHeadTracker"
Issues = "https://github.com/fholzm/PyHeadTracker/issues"
